# tsoha-ravintolasovellus

./: .env  README.md  app.py  index.py  pyproject.toml  restaurant.py  schema.sql  user.py
templates/: add_restaurant.html  index.html  login.html  register.html
