[tool.poetry]
name = "tsoha-ravintolasovellus"
version = "0.1.0"
description = ""
authors = ["Kaapo Kivioja"]
readme = "README.md"
packages = [{include = "tsoha_ravintolasovellus"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.3"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
